--- a/styles/sass/style.scss
+++ b/styles/sass/style.scss
@@ -1,1 +1,5 @@
-
+@import "./partials/setup";
+@import "./partials/variables";
+@import "./partials/typography";
+@import "./partials/baseStyles";
+@import "./partials/header";
