added styling to img container in blog section

--- a/styles/sass/partials/_header.scss
+++ b/styles/sass/partials/_header.scss
@@ -42,7 +42,7 @@
     position: absolute;
     bottom: -200px;
     right: 0;
-    width: 800px;
+    width: 50%;
     border-top: 60px solid $primary;
     border-bottom: 60px solid $primary;
     border-left: 50px solid $primary;
