--- a/styles/sass/partials/_blog.scss
+++ b/styles/sass/partials/_blog.scss
@@ -1,7 +1,28 @@
 .blog {
   background-color: $white;
+  padding: 50px 0 30px 0;
+  position: relative;
 
   .wrapper {
     display: flex;
+    flex-direction: column;
+  }
+  .row {
+    display: flex;
+  }
+
+  .textContainer {
+    width: 50%;
+  }
+
+  .rowOne {
+    justify-content: flex-end;
+    .imgContainer {
+      position: absolute;
+      top: -30px;
+      left: 0;
+      max-width: 50%;
+      box-shadow: 40px 30px 0px -5px $primary;
+    }
   }
 }
