--- a/styles/style.css
+++ b/styles/style.css
@@ -386,7 +386,7 @@ img {
   position: absolute;
   bottom: -200px;
   right: 0;
-  width: 800px;
+  width: 50%;
   border-top: 60px solid #fdfa69;
   border-bottom: 60px solid #fdfa69;
   border-left: 50px solid #fdfa69;
@@ -411,9 +411,36 @@ img {
 
 .blog {
   background-color: #fafafa;
+  padding: 50px 0 30px 0;
+  position: relative;
 }
 .blog .wrapper {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+.blog .row {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+.blog .textContainer {
+  width: 50%;
+}
+.blog .rowOne {
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+}
+.blog .rowOne .imgContainer {
+  position: absolute;
+  top: -30px;
+  left: 0;
+  max-width: 50%;
+  -webkit-box-shadow: 40px 30px 0px -5px #fdfa69;
+          box-shadow: 40px 30px 0px -5px #fdfa69;
 }
