--- a/styles/sass/partials/_blog.scss
+++ b/styles/sass/partials/_blog.scss
@@ -1,11 +1,13 @@
 .blog {
   background-color: $white;
-  padding: 50px 0 30px 0;
+  padding: 70px 0 50px 0;
   position: relative;
 
   .wrapper {
     display: flex;
     flex-direction: column;
+    height: 85vh;
+    justify-content: space-between;
   }
   .row {
     display: flex;
@@ -15,14 +17,53 @@
     width: 50%;
   }
 
+  p {
+    margin-bottom: 40px;
+  }
+
   .rowOne {
     justify-content: flex-end;
     .imgContainer {
       position: absolute;
       top: -30px;
       left: 0;
-      max-width: 50%;
+      width: 40%;
       box-shadow: 40px 30px 0px -5px $primary;
+
+      img {
+        width: 100%;
+      }
+    }
+
+    .textContainer {
+      padding-left: 160px;
+    }
+  }
+
+  .rowTwo {
+    justify-content: flex-start;
+    .imgContainer {
+      position: absolute;
+      bottom: -30px;
+      right: 0;
+      width: 40%;
+      box-shadow: -40px 30px 0px -5px $primary;
+
+      img {
+        width: 100%;
+      }
+    }
+
+    .textContainer {
+      padding-right: 160px;
+
+      h3 {
+        text-align: right;
+      }
+
+      .btnContainer {
+        text-align: right;
+      }
     }
   }
 }
