--- a/styles/sass/partials/_header.scss
+++ b/styles/sass/partials/_header.scss
@@ -22,6 +22,7 @@
   ul {
     display: flex;
     font-family: $headingFont;
+    text-transform: uppercase;
 
     li:not(:last-child) {
       margin-right: 50px;
@@ -29,7 +30,7 @@
 
     a:hover,
     :focus {
-      border-bottom: 2px solid $secondary;
+      border-bottom: 4px solid $secondary;
     }
   }
 
@@ -42,7 +43,7 @@
     position: absolute;
     bottom: -200px;
     right: 0;
-    width: 50%;
+
     border-top: 60px solid $primary;
     border-bottom: 60px solid $primary;
     border-left: 50px solid $primary;
