--- a/styles/sass/partials/_profile.scss
+++ b/styles/sass/partials/_profile.scss
@@ -8,4 +8,27 @@
     background-size: cover;
     background-repeat: no-repeat;
   }
+
+  .wrapper {
+    display: flex;
+    padding: 100px 0;
+    justify-content: space-between;
+  }
+
+  .imgContainer {
+    min-width: 20%;
+
+    img {
+      box-shadow: 40px 40px 0px -5px $primary;
+    }
+  }
+
+  .textContainer {
+    width: 66%;
+  }
+
+  p {
+    margin-bottom: 50px;
+    margin-right: 20px;
+  }
 }
