--- a/styles/style.css
+++ b/styles/style.css
@@ -555,3 +555,28 @@ img {
   margin-bottom: 50px;
   margin-right: 20px;
 }
+
+.gallery {
+  padding: 100px 0;
+}
+.gallery .wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+.gallery .imgContainer {
+  width: calc(33.3333333333% - 30px);
+}
+
+footer {
+  background-color: #2c2c2c;
+  padding: 5px 0;
+}
+footer p {
+  margin: 0;
+  color: #fafafa;
+  text-align: center;
+}
