--- a/styles/sass/style.scss
+++ b/styles/sass/style.scss
@@ -3,8 +3,4 @@
 @import "./partials/typography";
 @import "./partials/baseStyles";
 @import "./partials/header";
-@import "./partials/about";
-@import "./partials/blog";
-@import "./partials/info";
-@import "./partials/profile";
-@import "./partials/gallery";
+@import "./partials/pages/home";
