--- a/styles/style.css
+++ b/styles/style.css
@@ -335,6 +335,50 @@ img {
   text-transform: uppercase;
 }
 
+nav {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+}
+nav ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  font-family: "Playfair Display", serif;
+  text-transform: uppercase;
+}
+nav ul li:not(:last-child) {
+  margin-right: 50px;
+}
+nav ul a {
+  padding: 5px;
+  -webkit-transition: 0.3s border;
+  transition: 0.3s border;
+  position: relative;
+}
+nav ul a:before, nav ul a:after {
+  content: "";
+  position: absolute;
+  bottom: -10px;
+  left: 0;
+  width: 0px;
+  height: 5px;
+  margin: 5px 0 0;
+  -webkit-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
+  -webkit-transition-duration: 0.75s;
+          transition-duration: 0.75s;
+  opacity: 0;
+  background-color: #4ceea7;
+}
+nav ul a:hover::after, nav ul a:hover::before {
+  width: 100%;
+  opacity: 1;
+}
+
 .homeHeader {
   background-image: url("../assets/header-image.jpg");
   background-size: cover;
@@ -356,28 +400,6 @@ img {
       -ms-flex-pack: justify;
           justify-content: space-between;
   height: 100%;
-}
-.homeHeader nav {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
-}
-.homeHeader ul {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  font-family: "Playfair Display", serif;
-  text-transform: uppercase;
-}
-.homeHeader ul li:not(:last-child) {
-  margin-right: 50px;
-}
-.homeHeader ul a:hover,
-.homeHeader ul :focus {
-  border-bottom: 4px solid #4ceea7;
 }
 .homeHeader h1 {
   text-align: center;
@@ -438,6 +460,9 @@ img {
 .blog p {
   margin-bottom: 40px;
 }
+.blog img {
+  width: 100%;
+}
 .blog .rowOne {
   -webkit-box-pack: end;
       -ms-flex-pack: end;
@@ -450,9 +475,6 @@ img {
   width: 40%;
   -webkit-box-shadow: 50px 40px 0px -5px #fdfa69;
           box-shadow: 50px 40px 0px -5px #fdfa69;
-}
-.blog .rowOne .imgContainer img {
-  width: 100%;
 }
 .blog .rowOne .textContainer {
   padding-left: 160px;
@@ -470,16 +492,13 @@ img {
   -webkit-box-shadow: -50px 50px 0px -5px #fdfa69;
           box-shadow: -50px 50px 0px -5px #fdfa69;
 }
-.blog .rowTwo .imgContainer img {
-  width: 100%;
-}
 .blog .rowTwo .textContainer {
   padding-right: 160px;
 }
-.blog .rowTwo .textContainer h3 {
+.blog .rowTwo h3 {
   text-align: right;
 }
-.blog .rowTwo .textContainer .btnContainer {
+.blog .rowTwo .btnContainer {
   text-align: right;
 }
 
@@ -571,11 +590,11 @@ img {
   width: calc(33.3333333333% - 30px);
 }
 
-footer {
+.footer {
   background-color: #2c2c2c;
   padding: 5px 0;
 }
-footer p {
+.footer p {
   margin: 0;
   color: #fafafa;
   text-align: center;
