--- a/styles/sass/partials/_header.scss
+++ b/styles/sass/partials/_header.scss
@@ -38,3 +38,25 @@
 }
 
 //BlOG HEADER
+.blogHeader {
+  background-image: url("../assets/blog-header.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  height: 60vh;
+  padding: 30px 0 0 0;
+
+  .wrapper {
+    height: 100%;
+  }
+  .headingContainer {
+    display: flex;
+    height: inherit;
+    justify-content: center;
+    align-items: center;
+  }
+
+  h1 {
+    font-size: 4rem;
+  }
+}
