--- a/styles/sass/partials/_header.scss
+++ b/styles/sass/partials/_header.scss
@@ -1,5 +1,4 @@
 //Homepage Header
-
 .homeHeader {
   background-image: url("../assets/header-image.jpg");
   background-size: cover;
@@ -43,7 +42,7 @@
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
-  height: 60vh;
+  height: 650px;
   padding: 30px 0 0 0;
 
   .wrapper {
@@ -52,11 +51,12 @@
   .headingContainer {
     display: flex;
     height: inherit;
-    justify-content: center;
+    justify-content: flex-end;
     align-items: center;
   }
 
   h1 {
+    width: 66%;
     font-size: 4rem;
     margin-top: -110px;
   }
