--- a/styles/sass/partials/pages/_blog.scss
+++ b/styles/sass/partials/pages/_blog.scss
@@ -6,20 +6,21 @@
 }
 
 .posts {
-  max-width: 60%;
-  margin-top: -245px;
+  max-width: 70%;
+  width: 63%;
+  margin-top: -275px;
 
   .imgContainer {
     padding-left: 40px;
     img {
       width: 100%;
-      box-shadow: -45px 40px 0px -5px $primary;
+      box-shadow: -45px 50px 0px -5px $primary;
     }
   }
 }
 
 .postContainer {
-  max-width: calc(1280px * 0.6);
+  max-width: calc(1280px * 0.7);
   width: 90%;
   padding: 80px 0 0 50px;
   border: 4px solid $primary;
@@ -39,7 +40,7 @@
 }
 
 .commentsContainer {
-  max-width: calc(1280px * 0.6);
+  max-width: calc(1280px * 0.7);
   width: 90%;
   padding: 50px 0 0 50px;
 
