added form styling

--- a/styles/sass/style.scss
+++ b/styles/sass/style.scss
@@ -2,6 +2,8 @@
 @import "./partials/variables";
 @import "./partials/typography";
 @import "./partials/baseStyles";
+@import "./partials/nav";
 @import "./partials/header";
+@import "./partials/form";
 @import "./partials/pages/home";
 @import "./partials/pages/blog";
