--- a/styles/style.css
+++ b/styles/style.css
@@ -443,6 +443,83 @@ nav ul a:hover::after {
   margin-top: -110px;
 }
 
+.form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+.form fieldset {
+  padding: 0;
+  margin: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  border: none;
+  gap: 50px;
+  margin-bottom: 50px;
+}
+.form input {
+  width: 50%;
+  border: none;
+  border-bottom: 2px solid #4ceea7;
+  font-family: "Roboto", sans-serif;
+  color: #2c2c2c;
+  padding: 20px;
+  -webkit-transition: border 0.3s;
+  transition: border 0.3s;
+}
+.form input::-webkit-input-placeholder {
+  color: #2c2c2c;
+}
+.form input::-moz-placeholder {
+  color: #2c2c2c;
+}
+.form input:-ms-input-placeholder {
+  color: #2c2c2c;
+}
+.form input::-ms-input-placeholder {
+  color: #2c2c2c;
+}
+.form input::placeholder {
+  color: #2c2c2c;
+}
+.form input:focus, .form input:active {
+  outline: none;
+  border-bottom: 2px solid #fdfa69;
+}
+.form textarea {
+  border: 2px solid #4ceea7;
+  padding: 20px;
+  color: #2c2c2c;
+  font-family: "Roboto", sans-serif;
+  margin-bottom: 50px;
+  -webkit-transition: border 0.3s;
+  transition: border 0.3s;
+}
+.form textarea::-webkit-input-placeholder {
+  color: #2c2c2c;
+}
+.form textarea::-moz-placeholder {
+  color: #2c2c2c;
+}
+.form textarea:-ms-input-placeholder {
+  color: #2c2c2c;
+}
+.form textarea::-ms-input-placeholder {
+  color: #2c2c2c;
+}
+.form textarea::placeholder {
+  color: #2c2c2c;
+}
+.form textarea:focus, .form textarea:active {
+  outline: none;
+  border: 2px solid #fdfa69;
+}
+
 .about {
   background-color: #effdf3;
   padding: 200px 0 150px 0;
@@ -643,6 +720,7 @@ nav ul a:hover::after {
   max-width: 70%;
   width: 63%;
   margin-top: -275px;
+  padding-bottom: 60px;
 }
 .posts .imgContainer {
   padding-left: 40px;
