--- a/styles/sass/partials/pages/_blog.scss
+++ b/styles/sass/partials/pages/_blog.scss
@@ -3,13 +3,13 @@
   flex-direction: row-reverse;
   justify-content: space-between;
   width: 100%;
+  padding: 100px 0;
 }
 
 .posts {
   max-width: 70%;
   width: 63%;
-  margin-top: -275px;
-  padding-bottom: 60px;
+  margin-top: -375px;
 
   .imgContainer {
     padding-left: 40px;
@@ -69,4 +69,40 @@
 
 .sidebar {
   max-width: 30%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+
+  .imgContainer {
+    width: 100%;
+
+    img {
+      width: 100%;
+    }
+  }
+}
+
+.sidebarContainer {
+  background-color: $white;
+  padding: 20px;
+  width: 70%;
+
+  span {
+    font-weight: bold;
+  }
+
+  ul {
+    margin-top: 20px;
+  }
+
+  li {
+    line-height: 32px;
+    &::before {
+      content: "\2022";
+      color: $secondary;
+      font-weight: bold;
+      display: inline-block;
+      width: 1em;
+    }
+  }
 }
