--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@1,700&family=Roboto&display=swap");
 html {
   line-height: 1.15;
@@ -714,13 +715,13 @@ nav ul a:hover::after {
       -ms-flex-pack: justify;
           justify-content: space-between;
   width: 100%;
+  padding: 100px 0;
 }
 
 .posts {
   max-width: 70%;
   width: 63%;
-  margin-top: -275px;
-  padding-bottom: 60px;
+  margin-top: -375px;
 }
 .posts .imgContainer {
   padding-left: 40px;
@@ -777,4 +778,42 @@ nav ul a:hover::after {
 
 .sidebar {
   max-width: 30%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+}
+.sidebar .imgContainer {
+  width: 100%;
+}
+.sidebar .imgContainer img {
+  width: 100%;
+}
+
+.sidebarContainer {
+  background-color: #fafafa;
+  padding: 20px;
+  width: 70%;
+}
+.sidebarContainer span {
+  font-weight: bold;
+}
+.sidebarContainer ul {
+  margin-top: 20px;
+}
+.sidebarContainer li {
+  line-height: 32px;
+}
+.sidebarContainer li::before {
+  content: "•";
+  color: #4ceea7;
+  font-weight: bold;
+  display: inline-block;
+  width: 1em;
 }
