added styling for sidebar containers

--- a/styles/sass/partials/pages/_blog.scss
+++ b/styles/sass/partials/pages/_blog.scss
@@ -78,6 +78,7 @@
 
     img {
       width: 100%;
+      box-shadow: 20px 5px 0px -5px $white;
     }
   }
 }
@@ -86,6 +87,7 @@
   background-color: $white;
   padding: 20px;
   width: 70%;
+  box-shadow: 15px 0px 0px 0px $white;
 
   span {
     font-weight: bold;
