--- a/styles/style.css
+++ b/styles/style.css
@@ -443,6 +443,34 @@ nav ul a:hover::after {
   margin-top: -110px;
 }
 
+.contactHeader {
+  background-image: url("../assets/contact-header.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  height: 650px;
+  padding: 30px 0 0 0;
+}
+.contactHeader .wrapper {
+  height: 100%;
+}
+.contactHeader .headingContainer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  height: inherit;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.contactHeader h1 {
+  font-size: 4rem;
+  margin-bottom: 100px;
+}
+
 .form {
   display: -webkit-box;
   display: -ms-flexbox;
