--- a/styles/style.css
+++ b/styles/style.css
@@ -851,3 +851,25 @@ nav ul a:hover::after {
 .sidebarContainer li a {
   color: #2c2c2c;
 }
+
+.contactMain {
+  background: #effdf3;
+}
+.contactMain .wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding: 150px 0;
+}
+
+.contactForm {
+  padding: 50px;
+  width: 72%;
+  background-color: #fff;
+  margin-top: -425px;
+  -webkit-box-shadow: -45px 45px 0px -5px #fdfa69;
+          box-shadow: -45px 45px 0px -5px #fdfa69;
+}
