--- a/styles/sass/partials/_header.scss
+++ b/styles/sass/partials/_header.scss
@@ -4,7 +4,7 @@
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
-  height: 80vh;
+  height: 100vh;
   padding: 30px 0 50px 0;
   position: relative;
 
@@ -24,6 +24,7 @@
     position: absolute;
     bottom: -200px;
     right: 0;
+    width: 45%;
 
     border-top: 60px solid $primary;
     border-bottom: 60px solid $primary;
