--- a/styles/style.css
+++ b/styles/style.css
@@ -380,7 +380,7 @@ nav ul a:hover::after {
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
-  height: 80vh;
+  height: 100vh;
   padding: 30px 0 50px 0;
   position: relative;
 }
@@ -405,6 +405,7 @@ nav ul a:hover::after {
   position: absolute;
   bottom: -200px;
   right: 0;
+  width: 45%;
   border-top: 60px solid #fdfa69;
   border-bottom: 60px solid #fdfa69;
   border-left: 50px solid #fdfa69;
@@ -578,18 +579,39 @@ nav ul a:hover::after {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  height: 90vh;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  max-width: none;
+  width: 100%;
 }
 .blog .row {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+.blog .imgContainer {
+  min-width: 40%;
 }
 .blog .textContainer {
-  width: 50%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+  width: 40%;
+}
+.blog .inner {
+  max-width: 512px;
+  width: 90%;
 }
 .blog p {
   margin-bottom: 40px;
@@ -598,36 +620,25 @@ nav ul a:hover::after {
   width: 100%;
 }
 .blog .rowOne {
-  -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
+  margin-bottom: 100px;
 }
 .blog .rowOne .imgContainer {
-  position: absolute;
-  top: -40px;
-  left: 0;
-  width: 40%;
+  justify-self: flex-start;
+  margin-top: -114px;
+}
+.blog .rowOne .imgContainer img {
   -webkit-box-shadow: 50px 40px 0px -5px #fdfa69;
           box-shadow: 50px 40px 0px -5px #fdfa69;
 }
 .blog .rowOne .textContainer {
-  padding-left: 160px;
-}
-.blog .rowTwo {
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: flex-start;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
 }
 .blog .rowTwo .imgContainer {
-  position: absolute;
-  bottom: -50px;
-  right: 0;
-  width: 40%;
+  margin-bottom: -130px;
   -webkit-box-shadow: -50px 50px 0px -5px #fdfa69;
           box-shadow: -50px 50px 0px -5px #fdfa69;
-}
-.blog .rowTwo .textContainer {
-  padding-right: 160px;
 }
 .blog .rowTwo h3 {
   text-align: right;
