added media queries for homepage header

--- a/styles/sass/partials/_header.scss
+++ b/styles/sass/partials/_header.scss
@@ -25,6 +25,7 @@
     bottom: -200px;
     right: 0;
     width: 45%;
+    min-width: 650px;
 
     border-top: 60px solid $primary;
     border-bottom: 60px solid $primary;
