--- a/styles/sass/style.scss
+++ b/styles/sass/style.scss
@@ -8,3 +8,4 @@
 @import "./partials/pages/home";
 @import "./partials/pages/blog";
 @import "./partials/pages/contact";
+@import "./partials/mediaQueries";
