--- a/styles/sass/partials/_nav.scss
+++ b/styles/sass/partials/_nav.scss
@@ -1,4 +1,4 @@
-nav {
+.nav {
   display: flex;
   justify-content: flex-end;
 
@@ -6,33 +6,82 @@ nav {
     display: flex;
     font-family: $headingFont;
     text-transform: uppercase;
+  }
 
-    li:not(:last-child) {
-      margin-right: 50px;
+  li:not(:last-child) {
+    margin-right: 50px;
+  }
+
+  a {
+    padding: 5px;
+    transition: 0.3s border;
+    position: relative;
+
+    &::after {
+      content: "";
+      position: absolute;
+      bottom: -5px;
+      left: 0;
+      width: 0px;
+      height: 4px;
+      margin: 5px 0 0;
+      transition: width 0.4s ease-in-out;
+      background-color: $secondary;
     }
 
-    a {
-      padding: 5px;
-      transition: 0.3s border;
-      position: relative;
-
-      &::after {
-        content: "";
-        position: absolute;
-        bottom: -5px;
-        left: 0;
-        width: 0px;
-        height: 4px;
-        margin: 5px 0 0;
-        transition: width 0.4s ease-in-out;
-        background-color: $secondary;
-      }
-
-      &:hover {
-        &::after {
-          width: 100%;
-        }
-      }
+    &:hover::after {
+      width: 100%;
     }
   }
+}
+
+.mobileNav {
+  background-color: $black;
+  position: fixed;
+  top: 0;
+  left: -450px;
+  height: 100vh;
+  width: 100%;
+  max-width: 450px;
+  color: $white;
+  font-family: $headingFont;
+  font-size: 1.5rem;
+  padding: 35px;
+  transition: 0.3s;
+  z-index: 20;
+
+  li {
+    text-align: center;
+    margin-bottom: 20px;
+  }
+
+  .social {
+    display: flex;
+    justify-content: center;
+    justify-content: space-around;
+    margin-top: 30px;
+  }
+
+  i {
+    color: $white;
+  }
+}
+
+label {
+  cursor: pointer;
+  text-align: right;
+  display: none;
+}
+
+input[type="checkbox"] {
+  opacity: 0;
+  position: absolute;
+  &:checked ~ .mobileNav {
+    left: 0;
+  }
+}
+
+i {
+  font-size: 2.5rem;
+  color: $black;
 }
